--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,7 +4,7 @@
   ansible.builtin.package:
     update_cache: true
     name:
-      - haproxy
+      - "haproxy"
 
 - name: "Configure HAProxy"
   notify: "Restart HAProxy"
@@ -25,9 +25,10 @@
         recurse: yes
         group: "root"
         owner: "root"
-        mode: 0600
+        mode: "0600"
 
     - name: "Remove old confs"
+      when: haproxy_remove_old_confs | default(false)
       loop:
         - "{{ haproxy_confs_path }}"
         - "{{ haproxy_error_path }}"
@@ -51,4 +52,4 @@
         lstrip_blocks: yes
         group: "root"
         owner: "root"
-        mode: 0600
+        mode: "0600"
