--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -24,5 +24,7 @@
         haproxy_stats_login: "{{ inv_haproxy_stats_login }}"
         haproxy_stats_password: "{{ inv_haproxy_stats_password }}"
         haproxy_listen_stats_https: "{{ inv_haproxy_listen_stats_https }}"
+        haproxy_listen_stats_cert: "{{ inv_haproxy_listen_stats_cert }}"
+        haproxy_listen_stats_key: "{{ inv_haproxy_listen_stats_key }}"
       ansible.builtin.include_role:
         name: "labocbz.install_haproxy"
