--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -88,7 +88,7 @@
           when: inv_haproxy_stats_login is defined and inv_haproxy_stats_password is defined and inv_haproxy_listen_stats_https
           block:
 
-            - name: "Check HTTP basic auth-protected URL availability"
+            - name: "Check HTTPS basic auth-protected URL availability"
               register: result
               failed_when: result.status != 401
               ansible.builtin.uri:
@@ -98,7 +98,7 @@
                 user: "notMyUser"
                 password: "notMyPassword"
 
-            - name: "Check HTTP basic auth-protected URL"
+            - name: "Check HTTPS basic auth-protected URL"
               register: result
               failed_when: result.status != 200
               ansible.builtin.uri:
