--- a/tests/certs/main.yml
+++ b/tests/certs/main.yml
@@ -1,21 +1,25 @@
 ---
 
 inv_cert_bundles:
-  - name: "My-Local-CA-Authority"
+  - name: "My-Local-Ansible-Root-CA.pem.crt"
     type: "CA"
-    src: "/tmp/My-Local-CA-Authority.zip"
-    dest: "/usr/local/share/ca-certificates"
-    #src_user: "myUser"
-    #src_password: "secretPassword"
-    #dest_user: "root"
-    #dest_group: "root"
-    #dest_mode: "0755"
-  - name: "my.https.balancer.domain.tld"
+    src: "/tmp/My-Local-Ansible-Root-CA.pem.crt"
+
+  - name: "My-Local-Ansible-Intermediate-CA-1.pem.crt"
+    type: "CA"
+    src: "/tmp/My-Local-Ansible-Intermediate-CA-1.pem.crt"
+
+  - name: "My-Local-Ansible-Intermediate-CA-2.pem.crt"
+    type: "CA"
+    src: "/tmp/My-Local-Ansible-Intermediate-CA-2.pem.crt"
+
+  - name: "my-haproxy-server.domain.tld"
     type: "cert"
-    src: "/tmp/my.https.balancer.domain.tld.zip"
+    src: "/tmp/my-haproxy-server.domain.tld.zip"
     dest: "/etc/haproxy/ssl"
     #src_user: "myUser"
     #src_password: "secretPassword"
-    #dest_user: "root"
-    #dest_group: "root"
-    #dest_mode: "0755"
+    dest_user: "root"
+    dest_group: "root"
+    dest_mode: "0700"
+
