--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,6 +4,9 @@ haproxy_confs_path: "{{ haproxy_path }}/conf.d"
 haproxy_error_path: "{{ haproxy_path }}/errors"
 haproxy_ssl_path: "{{ haproxy_path }}/ssl"
 
+install_haproxy_group: "haproxy"
+install_haproxy_user: "haproxy"
+
 haproxy_error_files:
   - "400"
   - "403"
