--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -13,18 +13,18 @@
       tags:
         - "labocbz.install_haproxy"
       vars:
-        haproxy_path: "{{ inv_haproxy_path }}"
-        haproxy_confs_path: "{{ inv_haproxy_confs_path }}"
-        haproxy_error_path: "{{ inv_haproxy_error_path }}"
-        haproxy_ssl_path: "{{ inv_haproxy_ssl_path }}"
-        haproxy_error_files: "{{ inv_haproxy_error_files }}"
-        haproxy_listen_stats: "{{ inv_haproxy_listen_stats }}"
-        haproxy_listen_stats_port: "{{ inv_haproxy_listen_stats_port }}"
-        haproxy_listen_stats_uri: "{{ inv_haproxy_listen_stats_uri }}"
-        haproxy_stats_login: "{{ inv_haproxy_stats_login }}"
-        haproxy_stats_password: "{{ inv_haproxy_stats_password }}"
-        haproxy_listen_stats_https: "{{ inv_haproxy_listen_stats_https }}"
-        haproxy_listen_stats_cert: "{{ inv_haproxy_listen_stats_cert }}"
-        haproxy_listen_stats_key: "{{ inv_haproxy_listen_stats_key }}"
+        install_haproxy_path: "{{ inv_install_haproxy_path }}"
+        install_haproxy_confs_path: "{{ inv_install_haproxy_confs_path }}"
+        install_haproxy_error_path: "{{ inv_install_haproxy_error_path }}"
+        install_haproxy_ssl_path: "{{ inv_install_haproxy_ssl_path }}"
+        install_haproxy_error_files: "{{ inv_install_haproxy_error_files }}"
+        install_haproxy_listen_stats: "{{ inv_install_haproxy_listen_stats }}"
+        install_haproxy_listen_stats_port: "{{ inv_install_haproxy_listen_stats_port }}"
+        install_haproxy_listen_stats_uri: "{{ inv_install_haproxy_listen_stats_uri }}"
+        install_haproxy_stats_login: "{{ inv_install_haproxy_stats_login }}"
+        install_haproxy_stats_password: "{{ inv_install_haproxy_stats_password }}"
+        install_haproxy_listen_stats_https: "{{ inv_install_haproxy_listen_stats_https }}"
+        install_haproxy_listen_stats_cert: "{{ inv_install_haproxy_listen_stats_cert }}"
+        install_haproxy_listen_stats_key: "{{ inv_install_haproxy_listen_stats_key }}"
       ansible.builtin.include_role:
         name: "labocbz.install_haproxy"
