--- a/tests/inventory/group_vars/local.yml
+++ b/tests/inventory/group_vars/local.yml
@@ -3,12 +3,12 @@ inv_prepare_host_system_users:
   - login: "haproxy"
     group: "haproxy"
 
-inv_haproxy_path: "/etc/haproxy"
-inv_haproxy_confs_path: "{{ inv_haproxy_path }}/conf.d"
-inv_haproxy_error_path: "{{ inv_haproxy_path }}/errors"
-inv_haproxy_ssl_path: "{{ inv_haproxy_path }}/ssl"
+inv_install_haproxy_path: "/etc/haproxy"
+inv_install_haproxy_confs_path: "{{ inv_install_haproxy_path }}/conf.d"
+inv_install_haproxy_error_path: "{{ inv_install_haproxy_path }}/errors"
+inv_install_haproxy_ssl_path: "{{ inv_install_haproxy_path }}/ssl"
 
-inv_haproxy_error_files:
+inv_install_haproxy_error_files:
   - "400"
   - "403"
   - "408"
@@ -17,11 +17,11 @@ inv_haproxy_error_files:
   - "503"
   - "504"
 
-inv_haproxy_listen_stats: true
-inv_haproxy_listen_stats_https: true
-inv_haproxy_listen_stats_cert: "{{ inv_haproxy_ssl_path }}/my-haproxy-server.domain.tld/my-haproxy-server.domain.tld.pem.crt"
-inv_haproxy_listen_stats_key: "{{ inv_haproxy_ssl_path }}/my-haproxy-server.domain.tld/my-haproxy-server.domain.tld.pem.key"
-inv_haproxy_listen_stats_port: 8181
-inv_haproxy_listen_stats_uri: "haproxy/stats"
-inv_haproxy_stats_login: "joe"
-inv_haproxy_stats_password: "passwd"
+inv_install_haproxy_listen_stats: true
+inv_install_haproxy_listen_stats_https: true
+inv_install_haproxy_listen_stats_cert: "{{ inv_install_haproxy_ssl_path }}/my-haproxy-server.domain.tld/my-haproxy-server.domain.tld.pem.crt"
+inv_install_haproxy_listen_stats_key: "{{ inv_install_haproxy_ssl_path }}/my-haproxy-server.domain.tld/my-haproxy-server.domain.tld.pem.key"
+inv_install_haproxy_listen_stats_port: 8181
+inv_install_haproxy_listen_stats_uri: "haproxy/stats"
+inv_install_haproxy_stats_login: "joe"
+inv_install_haproxy_stats_password: "passwd"
