--- a/molecule/cicd-debian-11/converge.yml
+++ b/molecule/cicd-debian-11/converge.yml
@@ -1,30 +1,24 @@
 ---
 - name: "Converge"
-  hosts: "all"
+  hosts: "cicd-debian-11"
   tasks:
-    # replace these tasks with whatever you find suitable to test
-    - name: "Copy something to test use of synchronize module"
-      ansible.builtin.copy:
-        src: "/etc/hosts"
-        dest: "/tmp/hosts-from-controller"
-        mode: 0700
 
     - name: "Include labocbz.install_haproxy"
       tags:
         - "labocbz.install_haproxy"
       vars:
-        install_haproxy_path: "{{ inv_install_haproxy_path }}"
-        install_haproxy_confs_path: "{{ inv_install_haproxy_confs_path }}"
-        install_haproxy_error_path: "{{ inv_install_haproxy_error_path }}"
-        install_haproxy_ssl_path: "{{ inv_install_haproxy_ssl_path }}"
-        install_haproxy_error_files: "{{ inv_install_haproxy_error_files }}"
-        install_haproxy_listen_stats: "{{ inv_install_haproxy_listen_stats }}"
-        install_haproxy_listen_stats_port: "{{ inv_install_haproxy_listen_stats_port }}"
-        install_haproxy_listen_stats_uri: "{{ inv_install_haproxy_listen_stats_uri }}"
-        install_haproxy_stats_login: "{{ inv_install_haproxy_stats_login }}"
-        install_haproxy_stats_password: "{{ inv_install_haproxy_stats_password }}"
-        install_haproxy_listen_stats_https: "{{ inv_install_haproxy_listen_stats_https }}"
-        install_haproxy_listen_stats_cert: "{{ inv_install_haproxy_listen_stats_cert }}"
-        install_haproxy_listen_stats_key: "{{ inv_install_haproxy_listen_stats_key }}"
+        install_haproxy__path: "{{ inv_install_haproxy__path }}"
+        install_haproxy__confs_path: "{{ inv_install_haproxy__confs_path }}"
+        install_haproxy__error_path: "{{ inv_install_haproxy__error_path }}"
+        install_haproxy__ssl_path: "{{ inv_install_haproxy__ssl_path }}"
+        install_haproxy__error_files: "{{ inv_install_haproxy__error_files }}"
+        install_haproxy__listen_stats: "{{ inv_install_haproxy__listen_stats }}"
+        install_haproxy__listen_stats_port: "{{ inv_install_haproxy__listen_stats_port }}"
+        install_haproxy__listen_stats_uri: "{{ inv_install_haproxy__listen_stats_uri }}"
+        install_haproxy__stats_login: "{{ inv_install_haproxy__stats_login }}"
+        install_haproxy__stats_password: "{{ inv_install_haproxy__stats_password }}"
+        install_haproxy__listen_stats_https: "{{ inv_install_haproxy__listen_stats_https }}"
+        install_haproxy__listen_stats_cert: "{{ inv_install_haproxy__listen_stats_cert }}"
+        install_haproxy__listen_stats_key: "{{ inv_install_haproxy__listen_stats_key }}"
       ansible.builtin.include_role:
         name: "labocbz.install_haproxy"
